--- a/asset/index.scss
+++ b/asset/index.scss
@@ -3,3 +3,4 @@
 @import "../asset/sass/accueil/fonctionnement";
 @import "../asset/sass/accueil/restaurants";
 @import "../asset/sass/restaurant/header";
+@import "../asset/sass/restaurant/mainpage";
