--- a/asset/sass/accueil/_restaurants.scss
+++ b/asset/sass/accueil/_restaurants.scss
@@ -31,8 +31,9 @@
             padding: 20px 10px;
             background-color: white;
             
-            .card__txt{
-                border: 1px red solid;
+            .card__txt p{
+                padding: 5px;
+                font-weight: 350;
             }
             .heart-container{
                 font-size: 25px;
