--- a/asset/sass/accueil/_header.scss
+++ b/asset/sass/accueil/_header.scss
@@ -1,12 +1,13 @@
-header {
+.header {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    img {
+    .header_logo {
         width: 240px;
         padding: 20px 0px;
+       
 
     }
 
