--- a/asset/sass/restaurant/_header.scss
+++ b/asset/sass/restaurant/_header.scss
@@ -1,18 +1,38 @@
 .header{
     display: flex;
-    
-    
-    i{
-        font-size: 50px;
-        color: black;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
+    a{
+        position: relative;
+        font-size: 25px;
+        color: black;
+        left: -165px;
+        bottom: -30px;
        
+        
     }
+    
+
+     
+    
+
+    img {
+        width: 200px;
+        padding: 20px 0px;
+        padding-top: 0;
+        
+        
+    }
+   
 }
+
 
 .hero{
     display: flex;
     background-color: white;
+    padding: 0;
     
     img{
         width: 120%;   
@@ -22,8 +42,12 @@
 .title{
     display: flex;
     justify-content:space-between;
+    margin-right: 10px;
     font-family: shrikhand;
-    font-size: 25px;
+    font-size: 18px;
+    padding: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     .heart-container{
         font-size: 25PX;
     }
