--- a/asset/sass/_global.scss
+++ b/asset/sass/_global.scss
@@ -28,9 +28,37 @@ body * {
     color: white;
     font-weight: 600;
     margin-top: 20px;
-   
+    transition: all 1s ease-in-out;
+
+   :hover{
+        box-shadow: 10px 5px 5px red;
+        opacity: 0.9;
+        
+    }
 
 }
+.heart-container{
+    font-size: 25px;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover .fa-regular{
+        opacity: 0;
+        
+    }
+
+    
+    .fa-solid{
+        position: absolute;
+        opacity: 0;
+    }
+}
+
+
 
 footer{
     display: flex;
