--- a/asset/sass/accueil/_header.scss
+++ b/asset/sass/accueil/_header.scss
@@ -19,12 +19,14 @@
         justify-content: center;
         padding: 20px 0px;
         gap: 10px;
-        border-top: 3px gray solid;
-        border-bottom: 3px gray solid;
+        border-top: 1px gray solid;
+        border-bottom: 1px gray solid;
+        box-shadow: 1px 3px 8px 2px gray;
 
         input {
             background: transparent;
             border: none;
+           
         }
 
         ::placeholder {
@@ -40,9 +42,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 30px;
+        padding: 40px;
         align-items: center;
         background-color: $color-light-gray;
+        gap: 10px;
         *{
             text-align: center;
         }
