--- a/asset/sass/accueil/_restaurants.scss
+++ b/asset/sass/accueil/_restaurants.scss
@@ -13,6 +13,8 @@
 
         display: flex;
         flex-direction: column;
+        gap: 30px;
+        margin-top: 30px;
         .card{
             border-radius: 30px;
             background-color: white;
@@ -37,7 +39,8 @@
             }
             .heart-container{
                 font-size: 25px;
+
+                }
             }
         }
     }
-}
