--- a/asset/index.scss
+++ b/asset/index.scss
@@ -4,3 +4,4 @@
 @import "../asset/sass/accueil/restaurants";
 @import "../asset/sass/restaurant/header";
 @import "../asset/sass/restaurant/mainpage";
+@import "../asset/mediaqueries";
