--- a/asset/sass/accueil/_restaurants.scss
+++ b/asset/sass/accueil/_restaurants.scss
@@ -3,6 +3,7 @@
     background-color: $color-light-gray;
     flex-direction: column;
     padding: 20px;
+    padding-bottom: 80px;
 
     a{
         text-decoration: none;
