--- a/asset/index.css
+++ b/asset/index.css
@@ -8,10 +8,6 @@ body * {
   padding: 0px;
 }
 
-.main {
-  background-color: #f6f6f6;
-}
-
 .shrikhand {
   font-family: shrikhand;
 }
@@ -56,20 +52,77 @@ body * {
   transition: opacity 1s ease-in-out;
 }
 
-footer {
+.footer {
   display: flex;
+  flex-direction: column;
   color: white;
   background-color: #353535;
   padding: 20px;
+  gap: 10px;
 }
-footer .footer__ul {
+.footer h4 {
+  font-size: 18px;
+  font-weight: 400;
+}
+.footer .footer__ul {
+  display: flex;
   list-style: none;
+  flex-direction: column;
+  gap: 10px;
 }
-footer a {
+.footer .footer__ul i {
+  margin-right: 10px;
+  width: 20px;
+}
+.footer a {
   text-decoration: none;
   color: white;
 }
 
+.loader {
+  position: relative;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+  height: 40px;
+  background-color: #99E2D0;
+  font-size: 30px;
+  overflow: hidden;
+  font-weight: 900;
+  border-radius: 10px;
+  animation: fadeOut 1200ms forwards 1200ms;
+}
+
+.loader-bar {
+  height: 100%;
+  background-color: #9356DC;
+  animation: grow 1200ms linear forwards;
+}
+
+.content__loader {
+  opacity: 0.3;
+  animation: fadeIn 1200ms forwards 1200ms;
+}
+
+@keyframes grow {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 .header {
   display: flex;
   flex-direction: column;
@@ -87,8 +140,6 @@ footer a {
   justify-content: center;
   padding: 20px 0px;
   gap: 10px;
-  border-top: 1px gray solid;
-  border-bottom: 1px gray solid;
   box-shadow: 1px 3px 8px 2px gray;
 }
 .header form input {
@@ -137,9 +188,12 @@ footer a {
   display: flex;
   background-color: #f6f6f6;
   padding: 20px;
+  border: none;
   border-radius: 20px;
   font-weight: 600;
   margin: 10px;
+  box-shadow: 1px 3px 8px 2px gray;
+  font-size: 16px;
 }
 .fonctionnement__btns button span {
   position: relative;
@@ -162,6 +216,7 @@ footer a {
   background-color: #f6f6f6;
   flex-direction: column;
   padding: 20px;
+  padding-bottom: 80px;
 }
 .restaurants a {
   text-decoration: none;
@@ -223,7 +278,10 @@ footer a {
   padding: 0;
 }
 .hero__main img {
-  width: 120%;
+  width: 100%;
+  height: 260px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .title {
@@ -242,6 +300,10 @@ footer a {
 
 .content {
   background-color: #f6f6f6;
+  border-radius: 50px 50px 0;
+  position: relative;
+  z-index: 1;
+  margin-top: -50px;
 }
 
 .menu {
@@ -301,4 +363,106 @@ footer a {
   justify-content: center;
   align-items: center;
   padding-bottom: 30px;
+}
+
+/* Media Query for Tablet 
+(min-width: 768px) and (max-width: 1024px)*/
+/* header*/
+@media (min-width: 768px) and (max-width: 1024px) {
+  .header {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 40px;
+  }
+  .header form {
+    width: 108%;
+    padding: 10px 20px;
+  }
+  .hero {
+    padding: 30px;
+    margin-top: -10px;
+  }
+  /*mainpage*/
+  .fonctionnement {
+    padding: 30px;
+  }
+  .fonctionnement__btns {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
+  .restaurants {
+    padding: 30px;
+    padding-bottom: 100px;
+  }
+  .restaurants__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  /*footer*/
+  .footer {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding: 30px;
+  }
+  .footer h4 {
+    font-size: 20px;
+  }
+  .footer .footer__ul {
+    flex-direction: row;
+    gap: 20px;
+  }
+}
+/* Media Query for Desktop (min-width: 1025px) */
+/*header*/
+@media (min-width: 1025px) {
+  .header {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 60px;
+  }
+  .header_logo {
+    width: 180px;
+    padding: 10px 0;
+  }
+  .header form {
+    width: 108%;
+    padding: 10px 30px;
+  }
+  .hero {
+    padding: 50px;
+    margin-top: -15px;
+  }
+  /*mainpage*/
+  .fonctionnement {
+    padding: 40px;
+  }
+  .fonctionnement__btns {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .restaurants {
+    padding: 40px;
+    padding-bottom: 120px;
+  }
+  .restaurants__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  /*footer*/
+  .footer {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    padding: 40px;
+  }
+  .footer h4 {
+    font-size: 22px;
+  }
+  .footer .footer__ul {
+    flex-direction: row;
+    gap: 30px;
+  }
 }/*# sourceMappingURL=index.css.map */
