--- a/asset/sass/_global.scss
+++ b/asset/sass/_global.scss
@@ -5,17 +5,18 @@ $color-tertiaire:#99E2D0;
 $color-light-gray:#f6f6f6;
 $color-gray:#eaeaea;
 
+
 body {
     font-family: roboto;
-    margin: auto;
+    margin: auto;   
 }
+
 body * {
     margin: 0px;
     padding: 0px;
   }
-  .main{
-    background-color: $color-light-gray;
-  }
+
+  
 .shrikhand {
     font-family: shrikhand;
 }
@@ -71,17 +72,31 @@ body * {
 
 
 
-footer{
+.footer {
     display: flex;
+    flex-direction: column;
     color: white;
     background-color: #353535;
     padding: 20px;
-    
+    gap:10px;
+
+    h4 {
+        font-size: 18px;
+        font-weight: 400;
+    }
     
     
     
     .footer__ul{
+        display: flex;
         list-style:  none;
+        flex-direction: column;
+        gap:10px;
+
+        i {
+            margin-right: 10px;
+            width: 20px;
+        }
     }
     a{
         text-decoration: none;
