--- a/asset/index.css
+++ b/asset/index.css
@@ -79,29 +79,36 @@ body * {
   color: white;
 }
 
+.content__loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1;
+  animation: fade 5000ms forwards;
+}
+
 .loader {
   position: relative;
   text-align: center;
-  max-width: 400px;
-  width: 100%;
   height: 40px;
   background-color: #99E2D0;
   font-size: 30px;
   overflow: hidden;
   font-weight: 900;
+  width: 400px;
+  max-width: 400px;
   border-radius: 10px;
-  animation: fadeOut 1200ms forwards 1200ms;
 }
-
 .loader-bar {
   height: 100%;
+  width: 400px;
   background-color: #9356DC;
-  animation: grow 1200ms linear forwards;
-}
-
-.content__loader {
-  opacity: 0.3;
-  animation: fadeIn 1200ms forwards 1200ms;
+  animation: grow 4500ms linear forwards;
 }
 
 @keyframes grow {
@@ -112,15 +119,17 @@ body * {
     width: 100%;
   }
 }
-@keyframes fadeOut {
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-@keyframes fadeIn {
-  to {
+@keyframes fade {
+  0% {
     opacity: 1;
+  }
+  75% {
+    opacity: 0.5;
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
   }
 }
 .header {
@@ -232,6 +241,20 @@ body * {
   border-radius: 30px;
   background-color: white;
   overflow: hidden;
+  position: relative;
+}
+.restaurants__cards .card__new {
+  color: #008766;
+  background-color: #99E2D0;
+  font-weight: 400;
+  position: absolute;
+  z-index: 1;
+  top: 18px;
+  right: 25px;
+  border: 1px #99E2D0 solid;
+  padding: 8px;
+  padding-right: 18px;
+  padding-left: 18px;
 }
 .restaurants__cards img {
   width: 100%;
@@ -300,16 +323,66 @@ body * {
 
 .content {
   background-color: #f6f6f6;
-  border-radius: 50px 50px 0;
+  border-radius: 50px 50px 0 0;
   position: relative;
   z-index: 1;
   margin-top: -50px;
 }
 
+.block-1 {
+  animation: fadeIn1 5s forwards;
+}
+
+.block-2 {
+  animation: fadeIn2 6s forwards;
+}
+
+.block-3 {
+  animation: fadeIn3 8s forwards;
+}
+
+@keyframes fadeIn1 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn2 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn3 {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .menu {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.menu__text {
+  padding: 10px;
+}
+.menu__underline {
+  border-bottom: 5px solid #99E2D0;
+  width: 10%;
+  padding-top: 8px;
 }
 .menu__btns {
   display: flex;
@@ -338,11 +411,15 @@ body * {
   text-overflow: ellipsis;
   text-wrap: nowrap;
   overflow: hidden;
+  padding: 2px;
 }
 .menu .card__price {
   display: flex;
   color: black;
-  margin-right: 10px;
+  font-weight: 500;
+  margin-left: 45px;
+  padding: 10px;
+  margin-top: 30px;
 }
 .menu .card__checked {
   display: flex;
@@ -365,53 +442,51 @@ body * {
   padding-bottom: 30px;
 }
 
-/* Media Query for Tablet 
-(min-width: 768px) and (max-width: 1024px)*/
+/* Media Query for Tablet (min-width: 768px) and (max-width: 1024px)*/
 /* header*/
-@media (min-width: 768px) and (max-width: 1024px) {
-  .header {
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px 40px;
-  }
-  .header form {
-    width: 108%;
-    padding: 10px 20px;
-  }
-  .hero {
-    padding: 30px;
-    margin-top: -10px;
-  }
+@media (min-width: 768px) {
   /*mainpage*/
-  .fonctionnement {
-    padding: 30px;
-  }
-  .fonctionnement__btns {
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-  }
   .restaurants {
-    padding: 30px;
-    padding-bottom: 100px;
+    padding: 40px 10%;
+    padding-bottom: 120px;
   }
   .restaurants__cards {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  /*footer*/
-  .footer {
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    padding: 30px;
+  .restaurants__cards a {
+    width: 45%;
   }
-  .footer h4 {
+  .content {
+    max-width: 80%;
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+  .title {
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  .menu {
+    max-width: 80%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .menu h2 {
+    font-weight: 300;
     font-size: 20px;
   }
-  .footer .footer__ul {
-    flex-direction: row;
-    gap: 20px;
+  .menu .menu .card__title {
+    width: 90%;
+  }
+  /* footer*/
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer h4, .footer__ul {
+    text-align: center;
   }
 }
 /* Media Query for Desktop (min-width: 1025px) */
@@ -420,42 +495,34 @@ body * {
   .header {
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px 60px;
   }
   .header_logo {
     width: 180px;
     padding: 10px 0;
   }
   .header form {
-    width: 108%;
-    padding: 10px 30px;
+    width: 100%;
   }
   .hero {
     padding: 50px;
-    margin-top: -15px;
   }
   /*mainpage*/
   .fonctionnement {
-    padding: 40px;
+    padding: 40px 10%;
   }
   .fonctionnement__btns {
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
-  .restaurants {
-    padding: 40px;
-    padding-bottom: 120px;
-  }
-  .restaurants__cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .fonctionnement__btns button {
+    width: 30%;
   }
   /*footer*/
   .footer {
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: end;
+    align-items: center;
     padding: 40px;
   }
   .footer h4 {
@@ -463,6 +530,7 @@ body * {
   }
   .footer .footer__ul {
     flex-direction: row;
-    gap: 30px;
+    gap: 20px;
+    margin-right: 50px;
   }
 }/*# sourceMappingURL=index.css.map */
