--- a/asset/sass/accueil/_header.scss
+++ b/asset/sass/accueil/_header.scss
@@ -1,29 +1,44 @@
+.content__loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 1;
+    animation: fade 5000ms forwards;
+  }
+
+
 
 
 .loader {
     position: relative;
     text-align: center;
-    max-width: 400px;
-    width: 100%;
     height: 40px;
     background-color: $color-tertiaire;
     font-size: 30px;
     overflow: hidden;
     font-weight: 900;
-    
+    width: 400px;
+    max-width: 400px;
     border-radius: 10px;
-    animation: fadeOut 1200ms forwards 1200ms;   
-  }
-  .loader-bar{
-    height: 100%;
-    background-color: $color-primaire;
-    animation: grow 1200ms linear forwards;
-  }
+    
+   
+   
 
-  .content__loader {
-    opacity: 0.3;
-    animation: fadeIn 1200ms forwards 1200ms;
+    &-bar{
+        height: 100%;
+        width: 400px;
+        background-color: $color-primaire;
+        animation: grow 4500ms linear forwards;
+      }
   }
+  
+
+  
   
   @keyframes grow {
     0% {
@@ -34,18 +49,23 @@
     }
 }
 
-@keyframes fadeOut {
-    to {
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 0.5;
+        z-index: 1;
+    }
+    100% {
         opacity: 0;
-        visibility: hidden;
+        z-index: -1;
     }
 }
 
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-    }
-}
+
+
+
 
 .header {
     display: flex;
