--- a/asset/sass/restaurant/_mainpage.scss
+++ b/asset/sass/restaurant/_mainpage.scss
@@ -1,14 +1,73 @@
 .content {
     background-color: $color-light-gray;
-    border-radius: 50px 50px 0;
+    border-radius: 50px 50px 0 0;
     position: relative;
     z-index: 1;
     margin-top: -50px;
 }
+
+.block-1 {
+    animation: fadeIn1 5s forwards;
+}
+.block-2 {
+    animation: fadeIn2 6s forwards;
+}
+.block-3 {
+    animation: fadeIn3 8s forwards;
+}
+
+@keyframes fadeIn1 {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+       
+    }
+}
+@keyframes fadeIn2 {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    
+    100% {
+        opacity: 1;
+       
+    }
+}
+
+@keyframes fadeIn3 {
+    0% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 0;
+    }
+    
+    100% {
+        opacity: 1;
+       
+    }
+}
+
 .menu {
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    &__text {
+        padding: 10px;
+    }
+    &__underline {
+        border-bottom: 5px solid $color-tertiaire;
+        width: 10%;
+        padding-top: 8px;
+    }
+
 
     &__btns {
         display: flex;
@@ -18,7 +77,9 @@
 
     .menu__title {
         padding: 20px;
+
     }
+    
 
     //article
     .card {
@@ -41,13 +102,18 @@
                 text-overflow: ellipsis;
                 text-wrap: nowrap;
                 overflow: hidden;
+                padding: 2px;
             }
         }
 
         &__price {
             display: flex;
             color: black;
-            margin-right: 10px;
+            font-weight: 500;
+            margin-left: 45px;
+            padding: 10px;
+            margin-top: 30px;
+
 
         }
 
