--- a/asset/index.css
+++ b/asset/index.css
@@ -330,41 +330,25 @@ body * {
 }
 
 .block-1 {
-  animation: fadeIn1 5s forwards;
+  opacity: 0;
+  animation: fadeIn 3s ease-in forwards;
+  animation-delay: 0s;
 }
 
 .block-2 {
-  animation: fadeIn2 6s forwards;
+  opacity: 0;
+  animation: fadeIn 3s ease-in forwards;
+  animation-delay: 2s;
 }
 
 .block-3 {
-  animation: fadeIn3 8s forwards;
+  opacity: 0;
+  animation: fadeIn3 3s ease-in forwards;
+  animation-delay: 4s;
 }
 
-@keyframes fadeIn1 {
+@keyframes fadeIn {
   0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fadeIn2 {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fadeIn3 {
-  0% {
-    opacity: 0;
-  }
-  75% {
     opacity: 0;
   }
   100% {
@@ -400,6 +384,7 @@ body * {
   text-align: left;
   overflow: hidden;
   justify-content: space-between;
+  box-shadow: 1px 3px 8px 2px lightgrey;
 }
 .menu .card__title {
   margin: 15px 0px;
@@ -428,7 +413,7 @@ body * {
   background: #99E2D0;
   color: white;
   width: 0px;
-  height: 70px;
+  height: 80px;
   transition: width 1s ease-in-out;
 }
 .menu .card:hover .card__checked {
