--- a/asset/sass/restaurant/_mainpage.scss
+++ b/asset/sass/restaurant/_mainpage.scss
@@ -18,7 +18,7 @@
 }
 .block-3 {
     opacity: 0;
-    animation: fadeIn3 3s ease-in forwards;
+    animation: fadeIn 3s ease-in forwards;
     animation-delay: 4s;
 }
 
