--- a/asset/index.css
+++ b/asset/index.css
@@ -343,7 +343,7 @@ body * {
 
 .block-3 {
   opacity: 0;
-  animation: fadeIn3 3s ease-in forwards;
+  animation: fadeIn 3s ease-in forwards;
   animation-delay: 4s;
 }
 
