--- a/asset/sass/restaurant/_header.scss
+++ b/asset/sass/restaurant/_header.scss
@@ -3,26 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 
 
-    a{
-        position: relative;
-        font-size: 25px;
+    a {
+        position: absolute;
+        font-size: 20px;
         color: black;
-        left: -165px;
-        bottom: -30px;
+        left: 20px;
+        top: 20px;
        
         
     }
     
 
-     
-    
-
     img {
         width: 200px;
         padding: 20px 0px;
-        padding-top: 0;
         
         
     }
