--- a/asset/index.css
+++ b/asset/index.css
@@ -14,7 +14,8 @@ body * {
 
 .btn_commande {
   background: linear-gradient(#FF79DA, #9356DC);
-  padding: 20px;
+  padding: 15px;
+  width: 200px;
   border-radius: 20px;
   border: none;
   color: white;
@@ -281,18 +282,18 @@ body * {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .header a {
-  position: relative;
-  font-size: 25px;
+  position: absolute;
+  font-size: 20px;
   color: black;
-  left: -165px;
-  bottom: -30px;
+  left: 20px;
+  top: 20px;
 }
 .header img {
   width: 200px;
   padding: 20px 0px;
-  padding-top: 0;
 }
 
 .hero__main {
@@ -397,6 +398,9 @@ body * {
   text-wrap: nowrap;
   overflow: hidden;
   padding: 2px;
+}
+.menu .card__title p {
+  font-weight: 300;
 }
 .menu .card__price {
   display: flex;
