--- a/asset/sass/_global.scss
+++ b/asset/sass/_global.scss
@@ -21,9 +21,11 @@ body * {
     font-family: shrikhand;
 }
 
+
 .btn_commande {
     background: linear-gradient($color-secondaire, $color-primaire);
-    padding: 20px;
+    padding: 15px;
+    width: 200px;
     border-radius: 20px;
     border: none;
     color: white;
