--- a/asset/sass/restaurant/_mainpage.scss
+++ b/asset/sass/restaurant/_mainpage.scss
@@ -84,6 +84,10 @@
                 overflow: hidden;
                 padding: 2px;
             }
+
+            p {
+                font-weight: 300;
+            }
         }
 
         &__price {
